# python-cookiecutter

./: .gitignore  LICENSE  README.md  cookiecutter.json
your-project/: .gitignore  Makefile  pyproject.toml
your-project/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/ci/: lint_pr_title.py
